package designpatterns.gof.structural.flyweight.pattern;

/**
 * <h1>Flyweight</h1> Sử dụng việc chia sẻ để hỗ trợ số lượng lớn các đối tượng
 * fine-graied cỡ nhỏ 1 cách hiệu quả
 * 
 * @author EMAIL:vuquangtin@gmail.com , tel:0377443333
 * @version 1.0.0
 * @see <a href="https://github.com/vuquangtin/designpattern">https://github.com
 * 
 *      /vuquangtin/designpattern</a>
 *
 */
public class ConcreteFlyweight implements Flyweight {
	private String intrinsicState = "intrinsicState";

	@Override
	public void operation(String extrinsicState) {
		System.out.println("concrete flyweight : " + intrinsicState + " - " + extrinsicState);
	}
}